--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=DESKTOP-9T1C7LJ\\SQLEXPRESS;Database=VehicleApp;Trusted_Connection=True;ConnectRetryCount=0"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
