Add underscore package.

--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
     "rxjs": "6.0.0",
+    "underscore": "^1.9.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
